templates/vpc-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC"
Parameters:
  CidrBlock:
    Type: String
  SubnetCidrBlock:
    Type: String

Mappings:
  RegionMap:
    eu-west-1:
      "AMI": "ami-047bb4163c506cd98"
    eu-central-1:
      "AMI": "ami-0233214e13e500f77"
    eu-west-2:
      "AMI": "ami-f976839e"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !GetAtt InternetGateway.InternetGatewayId
      VpcId: !Ref VPC

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  InternetGatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: RouteTable
    Properties:
      RouteTableId:
        Ref: RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref SubnetCidrBlock
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: RouteTable

  SGPing:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: SG to test ping
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: 10.0.0.0/8
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t3.small"
      ImageId:
        Fn::FindInMap:
          - "RegionMap"
          - Ref: "AWS::Region"
          - "AMI"
      IamInstanceProfile: !Ref Ec2InstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref SGPing
          SubnetId: !GetAtt PublicSubnet.SubnetId
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"

  Ec2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref Ec2InstanceRole

  Ec2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Tags:
        - Key: "Name"
          Value: "TransitGatewayPeeringDemo"
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        # The managed IAM policy AmazonSSMManagedInstanceCore grants access to Session Manager
        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore

Outputs:
  VpcId:
    Value: !Ref VPC
  RouteTable:
    Value: !Ref RouteTable
  PublicSubnet:
    Value: !Ref PublicSubnet
